# anaden-helper

./: .gitignore  Cargo.toml  README.md  TASKS.md  canonical_feature_stories.md  defects_log.md  launcher-opengl-fix.md  sgconfig.yml  test_plan.md
.claude/: CLAUDE.md  settings.json
.claude/hooks/: block-dangerous-git.sh
.claude/rules/: git-guardrails.md
ast-grep-rules/: no-absence-skip-test.yml
ast-grep-tests/: no-absence-skip-test-test.yml
ast-grep-tests/__snapshots__/: no-absence-skip-test-snapshot.yml
crates/anaden-cli/: Cargo.toml
crates/anaden-cli/src/: contract.rs  main.rs  template_tool.rs
crates/anaden-cli/tests/: ensure_open_cli.rs
crates/anaden-core/: Cargo.toml
crates/anaden-core/src/: action.rs  game_state.rs  goal.rs  lib.rs  recognition.rs  region.rs  strategy.rs
crates/anaden-device/: Cargo.toml
crates/anaden-device/examples/: probe_windows_capture.rs  probe_windows_input.rs  probe_windows_launch.rs  scrcpy_session_probe.rs  scrcpy_touch_probe.rs
crates/anaden-device/src/: app_control.rs  client.rs  display.rs  input.rs  lib.rs  scrcpy.rs  scrcpy_session.rs  screenshot.rs  win32_capture.rs  win32_input.rs  win32_launch.rs  win32_proc.rs
crates/anaden-engine/: Cargo.toml
crates/anaden-engine/src/: lib.rs  orchestrator.rs  pipeline_driver.rs  pipeline_runner.rs  recovery.rs  state_machine.rs
crates/anaden-strategies/: Cargo.toml
crates/anaden-strategies/src/: lib.rs  registry.rs
crates/anaden-studio/: Cargo.toml
crates/anaden-studio/assets/: LICENSE
crates/anaden-studio/src/: app.rs  batch.rs  canvas.rs  library.rs  main.rs  proposals.rs  scoring.rs  source.rs
crates/anaden-vision/: Cargo.toml
crates/anaden-vision/examples/: analyze_menu_bar.rs  analyze_title_regions.rs  bench_loop.rs  bench_match.rs  crop_region.rs  extract_pc_title_templates.rs  find_bright2.rs  find_logo_corner_subfeature.rs  find_x.rs  normalize_shot.rs  probe_ccoeff.rs  stable_region.rs
crates/anaden-vision/src/: ccoeff.rs  collector.rs  engine.rs  lib.rs  matcher.rs  pipeline.rs  scale.rs  scene_detector.rs  template_store.rs
crates/anaden-vision/tests/: aspect_ratio_degradation.rs
docs/: goal-manifest.md  investigation.md  minitouch-design.md  pc-capture-dimensions.md  scrcpy-protocol.md  wiki.md
docs/llm-wiki/: index.md  log.md  schema.md
docs/llm-wiki/concepts/: ImageRecognitionPipeline.md  TaskOrchestration.md
docs/llm-wiki/entities/: Assistant.md
docs/llm-wiki/sources/: MaaCore.md  README.md.md
scripts/: test_hook_harness.sh  verify_pr_merge_safety.sh
templates/pipelines/_title_load/: load_game.toml
templates/pipelines/field_loop/: tap_bottom.toml  tap_hud_tr.toml
templates/pipelines/field_loop_pc/: pipeline.toml  tap_bottom.toml  tap_hud_tr.toml
templates/pipelines/nav_to_field/: dismiss_daily_popup.toml  field_hud_top.toml
templates/pipelines/nav_to_field_pc/: field_hud_top.toml  load_game.toml  tap_to_start.toml
templates/pipelines/worldmap_loop/: tap_ancient_tab.toml
templates/scenes/field/: diary.toml  hud_top.toml  hud_topright.toml  map.toml  template_01.toml
templates/scenes/field_pc/: hud_top.toml  hud_topright.toml  template_01.toml
templates/scenes/menu/: bag.toml  board.toml  gacha.toml  grasta.toml  info.toml  party.toml  record.toml
templates/scenes/menu_pc/: bag.toml  board.toml  gacha.toml  grasta.toml  info.toml  party.toml  record.toml
templates/scenes/title_pc/: title_logo_corner.toml  version_label.toml
