[workspace]
resolver = "2"
members = [
    "crates/anaden-core",
    "crates/anaden-device",
    "crates/anaden-vision",
    "crates/anaden-engine",
    "crates/anaden-strategies",
    "crates/anaden-cli",
    "crates/anaden-studio",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
anaden-core = { path = "crates/anaden-core" }
anaden-device = { path = "crates/anaden-device" }
anaden-vision = { path = "crates/anaden-vision" }
anaden-engine = { path = "crates/anaden-engine" }
anaden-strategies = { path = "crates/anaden-strategies" }

# Image processing
# default-features = false + png/bmp/jpeg で AVIF(rav1e) の重依存を除外。
# 本プロジェクトは PNG スクショ/テンプレのみ扱うため AVIF/WebP デコード不要。
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "rayon"] }
imageproc = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support (engine device abstraction)
async-trait = "0.1"

# Testing
tempfile = "3"
