[package]
name = "anaden-cli"
description = "CLI entry point for Another Eden automation"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anaden"
path = "src/main.rs"

[[bin]]
name = "anaden-tool"
path = "src/template_tool.rs"

[dependencies]
anaden-core = { workspace = true }
anaden-device = { workspace = true }
anaden-vision = { workspace = true }
anaden-engine = { workspace = true }
anaden-strategies = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
image = { workspace = true }
imageproc = { workspace = true }

[features]
default = []
# 常駐 capture(scrcpy) を CLI から利用可能にする。
# anaden-engine / anaden-device の capture-scrcpy feature を連鎖有効化する。
capture-scrcpy = ["anaden-engine/capture-scrcpy", "anaden-device/capture-scrcpy"]
