[package]
name = "anaden-vision"
description = "Template matching image recognition for game screens"
version.workspace = true
edition.workspace = true

[dependencies]
anaden-core = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
